--- a/resources/css/editor-style.css
+++ b/resources/css/editor-style.css
@@ -18,3 +18,11 @@ body {
 .wp-block[data-align="full"] {
 	@apply max-w-full;
 }
+
+/* NEED THIS IN ORDER TO INSERT BLOCKS BETWEEN OTHER BLOCKS IF PARAGRAPH G-BLOCK IS DISBALED */
+
+.wp-block {
+	/* max-width: 840px; */
+	margin-top: 28px;
+	margin-bottom: 28px;
+}
