--- a/resources/css/partials/forms.css
+++ b/resources/css/partials/forms.css
@@ -1,33 +1,52 @@
-.accordion {
-	.gform_wrapper.gravity-theme {
-		@apply md:mx-[-20px];
-		.gform_fields {
-			@apply gap-y-6;
+/* .accordion { */
+.gform_wrapper {
+	li {
+		@apply indent-0;
+	}
+	@apply md:mx-[-20px];
+	.gform_fields {
+		@apply gap-y-6;
+	}
+	input[type="text"],
+	input[type="email"],
+	input[type="tel"],
+	select {
+		@apply bg-brightgray h-[48px] px-10 mt-5;
+	}
+	textarea {
+		@apply bg-brightgray mt-5 xl:h-[160px];
+	}
+
+	select {
+		@apply bg-no-repeat appearance-none px-20;
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M7.46966 11.9213L1.39644 5.84805C1.10353 5.55514 1.10353 5.08027 1.39644 4.78739L2.10478 4.07905C2.39719 3.78664 2.87109 3.78608 3.16419 4.0778L8 8.89095L12.8358 4.0778C13.1289 3.78608 13.6028 3.78664 13.8952 4.07905L14.6035 4.78739C14.8964 5.0803 14.8964 5.55517 14.6035 5.84805L8.53034 11.9213C8.23744 12.2142 7.76256 12.2142 7.46966 11.9213Z' fill='%23747474'/%3E%3C/svg%3E");
+		background-position: 96% 50%;
+	}
+	input[type="text"],
+	input[type="email"],
+	input[type="tel"],
+	input[type="text"],
+	textarea {
+		@apply p-20;
+		&::placeholder {
+			@apply text-[#747474];
 		}
-		input[type="text"],
-		input[type="email"],
-		input[type="tel"],
-		select {
-			@apply bg-brightgray h-[48px] px-10 mt-5;
-		}
-		textarea {
-			@apply bg-brightgray mt-5 xl:h-[160px];
-		}
-		legend,
-		label {
-			@apply text-secondary;
-		}
-		.gform_required_legend {
-			@apply hidden;
-		}
-		.gform_footer input {
-			@apply button-main pl-30 pr-50 cursor-pointer block;
-			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9213 8.53129L5.84805 14.6045C5.55514 14.8974 5.08027 14.8974 4.78739 14.6045L4.07905 13.8962C3.78664 13.6038 3.78608 13.1299 4.0778 12.8368L8.89095 8.00095L4.0778 3.16516C3.78608 2.87207 3.78664 2.39816 4.07905 2.10576L4.78739 1.39741C5.0803 1.10451 5.55517 1.10451 5.84805 1.39741L11.9213 7.47063C12.2142 7.76351 12.2142 8.23838 11.9213 8.53129Z' fill='%23F5F5F8'/%3E%3C/svg%3E");
-			background-repeat: no-repeat;
-			background-position: 83% 53%;
-			&:hover {
-				background-position: 85% 53%;
-			}
+	}
+	legend,
+	label {
+		@apply text-secondary text-16;
+	}
+	.gform_required_legend {
+		@apply hidden;
+	}
+	.gform_footer input {
+		@apply button-main pl-30 pr-50 cursor-pointer block;
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9213 8.53129L5.84805 14.6045C5.55514 14.8974 5.08027 14.8974 4.78739 14.6045L4.07905 13.8962C3.78664 13.6038 3.78608 13.1299 4.0778 12.8368L8.89095 8.00095L4.0778 3.16516C3.78608 2.87207 3.78664 2.39816 4.07905 2.10576L4.78739 1.39741C5.0803 1.10451 5.55517 1.10451 5.84805 1.39741L11.9213 7.47063C12.2142 7.76351 12.2142 8.23838 11.9213 8.53129Z' fill='%23F5F5F8'/%3E%3C/svg%3E");
+		background-repeat: no-repeat;
+		background-position: 83% 53%;
+		&:hover {
+			background-position: 85% 53%;
 		}
 	}
 }
+/* } */
